@@ -12,6 +12,10 @@ cdbs (0.4.50) UNRELEASED; urgency=low
   * Documented variables DEB_AUTO_UPDATE_AUTOCONF, DEB_AUTO_UPDATE_AUTOMAKE,
     DEB_AUTO_UPDATE_LIBTOOL; thanks to Steve M. Robbins for the research
     (closes: #439750)
+  * Use dh_listpackages instead of custom list-packages script when debhelper
+    is used.  Since this requires a recent version of debhelper, debhelper is
+    now a dependency of cdbs.  (buildcore.mk, permodule-vars.mk)
+    (closes: #405413, #433862)
 
  -- Peter Eisentraut <petere@debian.org>  Mon, 13 Aug 2007 19:10:56 +0200
 
